chore(release): 0.4.1 - minor fixes, contract v2.9, docs sync
Minor batch across modules: JUL-forwarded records carry the logger name;
three-layer mixed intercept chains keep the nearest mergeable metadata;
ComponentSpec.Entry rejects empty ids; executor() refuses a disposed
context; Mapping.meta keeps entry order; the loader module requires the
core transitively; a blank patch name counts as absent; ensureId follows
upstream falsiness with a warning for non-string ids; non-object dsh
sections warn; SessionToolDemo is annotated as non-API.

Design contract v2.9 (en/zh synchronized): D5's key-space note, D23's
realm-unrewritten interception keys, boundaries 29/32/33 corrected, and
boundary semantics 36-44 appended (T46-T56). CHANGELOG carries the full
0.4.1 Fixed/Changed list; README and upstream-parity reflect v0.4.1 with
the measured 218-test count; revision bumped to 0.4.1.